Docs: Fix alignment of items in footer kosli-dev/cli#24

--- a/docs.kosli.com/assets/_main.scss
+++ b/docs.kosli.com/assets/_main.scss
@@ -403,6 +403,7 @@ body[dir="rtl"] .book-menu {
       &>div {
         width: auto;
         max-width: 250px;
+        justify-self: start;
       }
   }
 }
